fixing the hint colors on dark mode

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -24,6 +24,11 @@
         .dark-mode .bg-gray-100 {
             background-color: #2d3748;
         }
+        .dark-mode .random-word-tooltip {
+            background-color: #2d3748;
+            color: #ffffff;
+            border-color: #a0aec0;
+        }
         .theme-toggle {
             position: absolute;
             top: 10px;
@@ -43,7 +48,7 @@
             border-radius: 8px;
             white-space: nowrap;
             z-index: 10;
-            top: 100%;
+            top: 120%;
             left: 50%;
             transform: translateX(-50%);
         }
