dugmici ne mogu da se highlight vise

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -134,6 +134,7 @@
             font-weight: bold;
             text-align: center;
             font-size: 1rem;
+            user-select: none; /* Prevent text selection */
         }
         .placeholder-box {
             width: 2.5rem;
@@ -518,6 +519,7 @@
             font-weight: bold;
             text-align: center;
             font-size: 1rem;
+            user-select: none; /* Prevent text selection */
         }
 
         .key:hover, #backspace-key:hover {
